setup bundled custom jre for windows